# stinger-cpp-utils

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.claude/skills/stinger-util-release/: SKILL.md
.github/workflows/: build-and-test.yml  code-style.yml
cmake/: StingerUtilsConfig.cmake.in
docs/: MOCKCONNECTION.md
examples/: CMakeLists.txt  example_usage.cpp  receiver.cpp
include/stinger/mqtt/: brokerconnection.hpp  message.hpp  properties.hpp
include/stinger/utils/: conversions.hpp  format.hpp  hash.hpp  iconnection.hpp  mockconnection.hpp  mqttbrokerconnection.hpp  mqttconnection.hpp  mqttmessage.hpp  mqttproperties.hpp  return_codes.hpp  uuid.hpp
src/: conversions.cpp  format.cpp  hash.cpp  mockconnection.cpp  mqttbrokerconnection.cpp  mqttconnection.cpp  mqttmessage.cpp  return_codes.cpp
tests/: CMakeLists.txt  test_conversions.cpp  test_mockconnection.cpp  test_mqttconnection.cpp  test_mqttmessage.cpp
